--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,12 +14,14 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
-    "openai": "^6.9.1"
+    "openai": "^6.9.1",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
     "@types/express-session": "^1.18.2",
     "@types/node": "^24.10.1",
+    "@types/ws": "^8.18.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "~5.9.3"
   }
