--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "eventemitter3": "^5.0.1",
     "nanoid": "^5.1.6",
-    "preact": "^10.27.2"
+    "preact": "^10.27.2",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.10.2",
