--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "eventemitter3": "^5.0.1",
     "nanoid": "^5.1.6",
+    "normalize.css": "^8.0.1",
     "preact": "^10.27.2",
+    "water.css": "^2.1.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
